# ember

./: .env  .gitignore  .justfile.swp  README.md  file.dst  justfile  pyproject.toml
docs/: horizontal-fills.md
src/ember/: __init__.py  ember_types.py  embroidery.py  region_segmentation.py  server.py  summarize.py  system_prompt.yaml  utils.py
src/ember/embroider/: embroidery.py  region_segmentation.py  utils.py
src/ember/finetuning/: dataset_utils.py  pix2dst.ipynb  pix2dst.py
src/ember/implementations/: emb_naive.py  emb_sweeping.py  emb_sweeping_v2.py  image_types.py  pipeline.py  utils.py
src/ember/llm/: feature_request_prompt.yaml  main.py
src/ember/webapp/: server.py
src/ember/webapp/templates/: debug-info.html  index.html
static/: index.html
