[project]
name = "ember"
version = "0.1.0"
description = "A tool for converting images to embroidery files."
authors = [
    { name = "Thorne Wolfenbarger", email = "thornecanyon@gmail.com" }
]
dependencies = [
    "pyembroidery>=1.5.1",
    "opencv-python>=4.10.0.84",
    "numpy>=2.0.0",
    "absl-py>=2.1.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ember"]
