[project]
name = "ember"
version = "0.1.0"
description = "A tool for converting images to embroidery files."
authors = [
    { name = "Thorne Wolfenbarger", email = "thornecanyon@gmail.com" }
]
dependencies = [
    "datasets==2.18.0",
    "pyembroidery>=1.5.1",
    "opencv-python>=4.10.0.84",
    "absl-py>=2.1.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
    "scipy>=1.14.0",
    "scikit-image>=0.24.0",
    "transformers>=4.42.4",
    "llm>=0.15",
    "click>=8.1.7",
    "openai>=1.36.1",
    "rich>=13.7.1",
    "pytest>=8.3.1",
    "scikit-learn>=1.5.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ember"]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
